// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackCards creates correct snapshot for an array of stacks 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-1"
  >
    <div>
      <div>
        <div>
          StackCard mock 
          {"showUsernames":false,"stack":{"displayName":"name1","id":"1","type":"type1"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"showUsernames":false,"stack":{"displayName":"name2","id":"2","type":"type2"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"showUsernames":false,"stack":{"displayName":"name3","id":"3","type":"type3"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
      </div>
      <div
        class="makeStyles-paginationControlBar-3"
      >
        <div />
        <div>
          <div
            style="width: 100%;"
          >
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1qiowgr-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Create expectedTypeName
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCards creates correct snapshot for an empty array 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-11"
  >
    <div>
      <div>
        <div
          class="makeStyles-placeholderCard-12"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            No items to display.
          </p>
        </div>
      </div>
      <div
        class="makeStyles-paginationControlBar-13"
      >
        <div />
        <div>
          <div
            style="width: 100%;"
          >
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1qiowgr-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Create expectedTypeName
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCards creates correct snapshot when no create button 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-16"
  >
    <div>
      <div>
        <div>
          StackCard mock 
          {"showUsernames":false,"stack":{"displayName":"name1","id":"1","type":"type1"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"showUsernames":false,"stack":{"displayName":"name2","id":"2","type":"type2"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
        <div>
          StackCard mock 
          {"showUsernames":false,"stack":{"displayName":"name3","id":"3","type":"type3"},"typeName":"expectedTypeName","userPermissions":["open","delete","create","edit"],"openPermission":"open","deletePermission":"delete","editPermission":"edit","copySnippets":{}}
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackCards creates correct snapshot with different action button label prefix 1`] = `
<div>
  <div
    class="makeStyles-stackDiv-6"
  >
    <div>
      <div>
        <div
          class="makeStyles-placeholderCard-7"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-12gb3o9-MuiTypography-root"
          >
            No items to display.
          </p>
        </div>
      </div>
      <div
        class="makeStyles-paginationControlBar-8"
      >
        <div />
        <div>
          <div
            style="width: 100%;"
          >
            <button
              aria-label="add"
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-1qiowgr-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Request expectedTypeName
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
